--- a/documentation/tutorial.adoc
+++ b/documentation/tutorial.adoc
@@ -47,7 +47,7 @@ No extensive knowledge of Java is needed, only basic programming skills are requ
 [[framework.tutorial.overview]]
 == Overview
 
-You need about 20 to 60 minutes to complete the tutorial, depending on your existing experience.
+You'll have your first Vaadin app running in your IDE in a couple of minutes. To complete the whole tutorial, you'll need about 20 to 60 minutes, depending on your existing experience.
 Naturally, you can just do the beginning of the exercise or pick any of the steps you want.
 To start from a specific step, we have prepared the example code after each step to be downloaded as a zip file.
 
