Added reference to getting-started-kotlin from chapter-getting-started

--- a/documentation/getting-started/chapter-getting-started.asciidoc
+++ b/documentation/getting-started/chapter-getting-started.asciidoc
@@ -22,3 +22,5 @@ include::getting-started-maven.asciidoc[leveloffset=+2]
 include::getting-started-package.asciidoc[leveloffset=+2]
 
 include::getting-started-scala.asciidoc[leveloffset=+2]
+
+include::getting-started-kotlin.asciidoc[leveloffset=+2]
