--- a/documentation/portal/portal-osgi.asciidoc
+++ b/documentation/portal/portal-osgi.asciidoc
@@ -61,15 +61,15 @@ public class MyUI extends UI {
 
 
 [[portal.osgi.portlet.gradle]]
-== Deployment a Portlet With OSGi(Gradle)
-Here is an example of Liferay workspace with a portlet module and short readme how to deploy that to Liferay portal.
-https://github.com/elmot/liferay-7-solid-portlet-example/
+== Deployment a Portlet With OSGi (Gradle)
+Here is an example of a Liferay workspace with a portlet module and a short readme on how to deploy that to a Liferay portal.
+link:https://github.com/elmot/liferay-7-solid-portlet-example/[]
 
 [[portal.osgi.portlet]]
 == Deployment a Portlet With OSGi (Maven)
 An OSGi portlet should be packaged as a JAR with a proper OSGi bundle
 manifest, and deployed to a portal that has its required bundles installed.
-Maven archetype `com.vaadin:vaadin-archetype-liferay-portlet:8.1.0` is a good starting point to build an OSGi portlet application.
+The maven archetype `com.vaadin:vaadin-archetype-liferay-portlet:8.1.0` is a good starting point to build an OSGi portlet application.
 The required bundles (and the application as well) can be installed using link:https://dev.liferay.com/develop/tutorials/-/knowledge_base/7-0/blade-cli[blade client].
 The latest client binary can be downloaded from the link: link:https://releases.liferay.com/tools/blade-cli/latest/blade.jar[]
 
