--- a/documentation/advanced/advanced-dragndrop.asciidoc
+++ b/documentation/advanced/advanced-dragndrop.asciidoc
@@ -361,6 +361,11 @@ When dragging on top of a row, `v-grid-row-drag-center` indicates ON_TOP, `v-gri
 
 (((range="endofrange", startref="term.advanced.dragndrop")))
 
+=== Drag and Drop Rows in TreeGrid
+
+To make a TreeGrid component's rows draggable or to make them a drop target, apply [classname]#TreeGridDragSource# or [classname]#TreeGridDropTarget# extensions to the component, respectively.
+In addition to the drag and drop features for Grid above, [classname]#TreeGridDropEvent# provides information about the node's status (expanded or collapsed) and it's depth in the hierarchy.
+
 == Drag and Drop Files
 
 Files can be uploaded to the server by dropping them onto a file drop target. To make a component a file drop target, apply the [classname]#FileDropTarget# extension to it by creating a new instance and passing the component as first constructor parameter to it.
