--- a/documentation/components/components-fields.asciidoc
+++ b/documentation/components/components-fields.asciidoc
@@ -173,7 +173,7 @@ trailing whitespace from a string. Since [interfacename]#Validator# is a functio
 interface, you can often simply write a lambda expression instead of a full class
 declaration. There is also an [methodname]#withValidator# overload that creates a
 validator from a boolean function and an error message. If the application requires
-more sophisticated validation diagnostics (ex. locale-specific), there is a
+more sophisticated validation diagnostics (e.g. locale-specific), there is a
 method [methodname]#withValidator#, which uses a boolean function and an [classname]#ErrorMessageProvider#.
 The [classname]#ErrorMessageProvider# can compose diagnostic messages based on the locale of the validation
 and the source component value, which are provided with the [classname]#ValueContext#.
